Revised css and added period present in original scan

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -5,3 +5,11 @@ footer{
 	margin-top: 1em;
 	text-align: right;
 }
+
+
+
+#chapter-4 blockquote:first-of-type{
+	padding: 2em;
+	text-align: center;
+}
+
