--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,19 +1,12 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
-footer{
-	margin-top: 1em;
-	text-align: right;
+#chapter-4 blockquote p{
+	text-align: center;
+	text-indent: 0;
 }
 
-
-
-#chapter-4 blockquote:first-of-type{
-	padding: 2em;
+#chapter-10 blockquote p{
 	text-align: center;
-}
-
-#chapter-10 blockquote:first-of-type{
-	padding: 2em;
-	text-align: center;
+	text-indent: 0;
 }
