--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -4,8 +4,8 @@
 #chapter-4 blockquote{
 	margin: 1em auto;
 	max-width: 100%;
-	padding: 2em;
-	width: 20em;
+	padding-left: auto;
+	padding-right: auto;
 }
 
 #chapter-4 blockquote p{
