--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,16 +1,14 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
-#chapter-4 blockquote{
-	margin: 1em auto;
-	max-width: 100%;
-	padding-left: auto;
-	padding-right: auto;
-}
+
 
 #chapter-4 blockquote p{
 	text-align: initial;
-	text-indent: 0;
+	text-indent: 2em;
+	
+	
+	
 }
 
 #chapter-10 blockquote p{
